feat: Поправить текущие тесты